<resources>
    <string name="app_name">BIC Application</string>
    <string name="home_btn">전체 챌린지</string>
    <string name="mychall_btn">내 챌린지</string>
    <string name="mystack_btn">내 스택</string>
    <string name="mypage_btn">마이페이지</string>
    <string name="stack">스택</string>
    <string name="mypage">마이페이지</string>
    <string name="user_name">홍길동</string>
    <string name="user_id">USER-12345</string>
    <string name="wallet_addr">지갑 주소</string>
    <string name="alarm_text">알림 허용</string>
    <string name="adv_text">마케팅 수신 동의</string>
    <string name="logout_text">로그아웃</string>
    <string name="Withdrawal_text">회원탈퇴</string>
    <string name="mystack">내 스택</string>
    <string name="mychall">내 챌린지</string>
    <string name="chall_status">챌린지 현황</string>
    <string name="chall_daterange">챌린지 기간</string>
    <string name="chall_category">카테고리</string>
    <string name="chall_kind">챌린지 종목</string>
    <string name="chall_choose_open">내 챌린지를 보여줘!</string>
    <string name="chall_grouppwd">비밀번호</string>
    <string name="chall_desc">챌린지 소개</string>
    <string name="chall_name">챌린지 이름</string>
    <string name="deposit">예치금</string>
    <string name="exit">취소하기</string>
    <string name="create">개설하기</string>
    <string name="participate">참가하기</string>
    <string name="backbtn_desciption">뒤로가기</string>
    <string name="newchall_header">CHALLENGE</string>
    <string name="newchall_category_hint">카테고리를 선택하세요</string>
    <string name="indoor_exercise">실내 운동</string>
    <string name="outdoor_exercise">야외 운동</string>
    <string name="auth_github">깃허브</string>
    <string name="auth_image">이미지</string>
    <string name="auth_action">액션</string>
    <string name="newchall_open">공개</string>
    <string name="newchall_private">비공개</string>
    <string name="newchall_info">챌린지 정보</string>
    <string name="newchall_klay">KLAY</string>
    <string name="newchall_desc_limit">챌린지 소개(100자 이내)</string>
    <string name="newchall_upload_image">이미지 업로드</string>
    <string name="participate_participate">챌린지에 참여하시겠습니까?</string>
    <string name="participate_walletaddr">송금할 지갑 주소</string>
    <string name="finished_chall_description">종료된 챌린지입니다.</string>
    <string name="participate_count">참가자 수</string>
    <string name="myhistory">챌린지 히스토리</string>
    <string name="certify_status">인증 현황</string>
    <string name="finished_view_rewards">상금 보기</string>
    <string name="certify_success">[오늘의 인증 성공]</string>
    <string name="certify_fail">[오늘의 인증 실패]</string>
</resources>