<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/home_btn" />
        <item
            android:id="@+id/chall"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/mychall_btn" />
        <item
            android:id="@+id/stack"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_stacked_bar_chart_24"
            android:title="@string/mystack_btn" />
        <item
            android:id="@+id/mypage"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_contact_page_24"
            android:title="@string/mypage_btn" />
    </group>
</menu>