<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishedchallActivity">

    <RelativeLayout
        android:id="@+id/relativelayout_finished_header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="match_parent">

        <ImageButton
            android:id="@+id/btn_finished_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/backbtn_desciption"
            app:srcCompat="@drawable/back_btn"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/chall_name" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout_finished_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_finished_header"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/textview_finished_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="주 7일"
                android:gravity="center"/>
            <TextView
                android:id="@+id/textview_finished_certify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="이미지 인증"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_finished_chall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/bic_logo"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:id="@+id/finished_chall_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finished_chall_description"
            android:gravity="center"
            android:layout_marginBottom="50dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="5"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/chall_category" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/chall_daterange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/chall_choose_open" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/deposit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/participate_count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:text="@string/chall_category"
                android:layout_gravity="fill_horizontal"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginBottom="5dp"
                android:text="@string/chall_daterange"
                android:layout_gravity="fill_horizontal"
                android:gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/chall_choose_open" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/deposit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/participate_count" />

        </GridLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_newchall_exit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/certify_status"/>

        <Button
            android:id="@+id/btn_newchall_participate"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/finished_view_rewards"
            android:layout_toEndOf="@id/btn_newchall_exit"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>